--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ compiler:
 before_install:
  - sudo apt-get update
 install:
- - sudo apt-get install libboost1.54-all-dev
+ - sudo apt-get install libboost-all-dev
