--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: c
 script:
- - ./travis/script.sh
+ - ./.travis/script.sh
 compiler:
  - clang
  - gcc
 before_install:
- - sudo apt-get update
+ - ./.travis/before_install.sh
 install:
- - sudo apt-get install libboost-all-dev
+ - ./.travis/install.sh
