adding autoconf generated files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,17 @@
 
 *~
 *.gch
+COPYING
+INSTALL
+Makefile.in
+aclocal.m4
+autom4te.cache/
+build/
+config.guess
+config.sub
+configure
+depcomp
+install-sh
+ltmain.sh
+m4/
+missing
