adding env.global BRANCH to .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,25 @@
 language: c
 compiler:
- - clang
- - gcc
+  - clang
+  - gcc
+env:
+  global
+    - BRANCH=master
+# language: objective-c
+#   matrix:
+#     - CC=clang CXX=clang++
+#     - CC=gcc CXX=g++
 before_install:
- - ./.travis/before_install.sh
+  - ./.travis/before_install.sh
 install:
- - ./.travis/install.sh
+  - ./.travis/install.sh
 before_script:
- - ./.travis/before_script.sh
+  - ./.travis/before_script.sh
 script:
- - ./.travis/script.sh
+  - ./.travis/script.sh
 after_success:
- - ./.travis/after_success.sh
+  - ./.travis/after_success.sh
 after_failure:
- - ./.travis/after_failure.sh
+  - ./.travis/after_failure.sh
 after_script:
- - ./.travis/after_script.sh
+  - ./.travis/after_script.sh
