adding AC_LANG_PUSH to autoconf.ac

--- a/configure.ac
+++ b/configure.ac
@@ -1,13 +1,28 @@
 #                                               -*- Autoconf -*-
 # Process this file with autoconf to produce a configure script.
 
+
 AC_PREREQ([2.68])
-AC_INIT([cpp-crapola], [0.0.1], [rubicks@users.noreply.github.com])
+
+
+# define package information
+AC_INIT([cpp-crapola],
+        [0.0.1],
+        [rubicks@users.noreply.github.com],
+        [cpp-crapola],
+        [https://github.com/rubicks/cpp-crapola])
+
+
+# configure autoconf
 AC_CONFIG_HEADERS([config.h])
-# AC_CONFIG_SRCDIR([config.h])
+#AC_CONFIG_SRCDIR([config.h])
 AC_CONFIG_MACRO_DIR([m4])
 
-# Checks for programs.
+# configure automake
+AM_INIT_AUTOMAKE
+
+
+# check for programs
 AC_PROG_AWK
 AC_PROG_CC
 AC_PROG_CC_C99
@@ -19,9 +34,8 @@ AC_PROG_INSTALL
 AC_PROG_LIBTOOL
 AC_PROG_LN_S
 AC_PROG_MAKE_SET
-# AC_USE_SYSTEM_EXTENSIONS
-
-AM_INIT_AUTOMAKE
+#AC_USE_SYSTEM_EXTENSIONS
+AC_LANG_PUSH([C++])
 
 # Checks for libraries.
 
