still trying for boost detection, and autoconf-archive installation

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ compiler:
 #     - CC=gcc CXX=g++
 before_install:
   - export PROJECT_DIR=${TRAVIS_BUILD_DIR}
-  - echo && echo "\${PROJECT_DIR} == \"${PROJECT_DIR}\""
+  - echo "${PROJECT_DIR}"
   - ./.travis/before_install.sh
 install:
   - ./.travis/install.sh
