improved travis mocking, better mock diagnostics

--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,8 @@
 *.la
 *.a
 
-*~
 *.gch
+*~
 COPYING
 INSTALL
 Makefile.in
@@ -21,6 +21,7 @@ aclocal.m4
 autom4te.cache/
 build/
 config.guess
+config.h.in
 config.sub
 configure
 depcomp
