trying github token stuff

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,5 @@ after_failure:
   - ./.travis/after_failure.sh
 after_script:
   - ./.travis/after_script.sh
+env:
+  - secure: "HvaqYrFzSaXy0OQdJ87RPARxV+VXs6Nu5Aw79OkGLxVAlsKjQW5emBEF1XrL3fqMeitY+s49dj1yQ0vtoHS4g0VRZ0ZvcsAzjiDHT3sKh3em0Qz9BGkJayxpeSyec1guZbY8XUdYm3g1op0wKW9X74qfptFnwS7NEuYkKbxxzZI="
