--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: c
 compiler:
   - clang
   - gcc
+env:
+  global:
+    - secure: "HvaqYrFzSaXy0OQdJ87RPARxV+VXs6Nu5Aw79OkGLxVAlsKjQW5emBEF1XrL3fqMeitY+s49dj1yQ0vtoHS4g0VRZ0ZvcsAzjiDHT3sKh3em0Qz9BGkJayxpeSyec1guZbY8XUdYm3g1op0wKW9X74qfptFnwS7NEuYkKbxxzZI="
 before_install:
   - export PROJECT_DIR=${TRAVIS_BUILD_DIR}
   - echo "${PROJECT_DIR}"
@@ -18,5 +21,4 @@ after_failure:
   - ./.travis/after_failure.sh
 after_script:
   - ./.travis/after_script.sh
-env:
-  - secure: "HvaqYrFzSaXy0OQdJ87RPARxV+VXs6Nu5Aw79OkGLxVAlsKjQW5emBEF1XrL3fqMeitY+s49dj1yQ0vtoHS4g0VRZ0ZvcsAzjiDHT3sKh3em0Qz9BGkJayxpeSyec1guZbY8XUdYm3g1op0wKW9X74qfptFnwS7NEuYkKbxxzZI="
+
