--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,9 @@ before_script:
 script:
   - ./.travis/script.sh
 after_success:
-  - [ "${TRAVIS_COMMIT}" ] || exit 0
+  - if [ -n "${TRAVIS_COMMIT}" ] ; then exit 0 ; fi
   - echo "\${TRAVIS_COMMIT} == \"${TRAVIS_COMMIT}\"
-  - [ "master" == "${TRAVIS_BRANCH}" ] || exit 0
+  - if [ "master" != "${TRAVIS_BRANCH}" ] ; then exit 0 ; fi
   - echo "this is the master branch"
   - exit 0
   - echo "this should never print"
