--- a/.travis.yml
+++ b/.travis.yml
@@ -16,12 +16,7 @@ before_script:
 script:
   - ./.travis/script.sh
 after_success:
-  - if [ -n "${TRAVIS_COMMIT}" ] ; then exit 0 ; fi
-  - echo "\${TRAVIS_COMMIT} == \"${TRAVIS_COMMIT}\""
-  - if [ "master" != "${TRAVIS_BRANCH}" ] ; then exit 0 ; fi
-  - echo "this is the master branch"
-  - exit 0
-  - echo "this should never print"
+  - ./.travis/after_success.sh
 after_failure:
   - ./.travis/after_failure.sh
 after_script:
