--- a/.travis.yml
+++ b/.travis.yml
@@ -24,5 +24,10 @@ after_script:
 notifications:
   - webhooks:
     - urls:
-      - http://e2qp70uqza5j.runscope.net/travis
+      - http://e2qp70uqza5j.runscope.net/fee
+      - http://e2qp70uqza5j.runscope.net/fie
+      - http://e2qp70uqza5j.runscope.net/foe
+      - http://e2qp70uqza5j.runscope.net/fum
+    - on_success: always
+    - on_failure: always
     - on_start: true
