--- a/.travis.yml
+++ b/.travis.yml
@@ -22,14 +22,4 @@ after_failure:
 after_script:
   - ./.travis/after_script.sh
 notifications:
-  - webhooks:
-    - urls:
-      - http://postbin.hackyon.com/11BDA73AC2
-      - http://requestb.in/1b9qxae1/travis
-      - http://e2qp70uqza5j.runscope.net/fee
-      - http://e2qp70uqza5j.runscope.net/fie
-      - http://e2qp70uqza5j.runscope.net/foe
-      - http://e2qp70uqza5j.runscope.net/fum
-    - on_success: always
-    - on_failure: always
-    - on_start: true
+  - webhooks: http://postbin.hackyon.com/11BDA73AC2
