--- a/.gitignore
+++ b/.gitignore
@@ -14,18 +14,19 @@
 
 *.gch
 *~
-COPYING
-INSTALL
-Makefile.in
-aclocal.m4
-autom4te.cache/
-build/
-config.guess
-config.h.in
-config.sub
-configure
-depcomp
-install-sh
-ltmain.sh
-m4/
-missing
+
+/COPYING
+/INSTALL
+/Makefile.in
+/aclocal.m4
+/autom4te.cache/
+/_build/
+/config.guess
+/config.h.in
+/config.sub
+/configure
+/depcomp
+/install-sh
+/ltmain.sh
+/m4/
+/missing
