cleans up after long absence

--- a/configure.ac
+++ b/configure.ac
@@ -1,45 +1,34 @@
 # cpp-crapola/configure.ac
 
-#                                               -*- Autoconf -*-
-# Process this file with autoconf to produce a configure script.
-
 AC_PREREQ([2.68])
 
 # define package information
 AC_INIT([cpp-crapola],
-        [0.0.1],
-        [rubicks@users.noreply.github.com],
+        [m4_esyscmd_s([git describe --always --dirty])],
+        [rubicks00@gmail.com],
         [cpp-crapola],
         [https://github.com/rubicks/cpp-crapola])
 
 AC_CONFIG_SRCDIR([configure.ac])
-
-# configure automake
-AM_INIT_AUTOMAKE([subdir-objects])
-
-# configure autoconf
+AC_LANG_PUSH([C++])
 AC_CONFIG_HEADERS([config.h])
-
 AC_CONFIG_MACRO_DIR([m4])
 
-# check for programs
-AC_PROG_AWK
-AC_PROG_CC
-AC_PROG_CC_C99
-AC_PROG_CC_C_O
-AC_PROG_CPP
-AC_PROG_CXX
-AC_PROG_CXXCPP
-AC_PROG_INSTALL
-AC_PROG_LIBTOOL
-AC_PROG_LN_S
-AC_PROG_MAKE_SET
-#AC_USE_SYSTEM_EXTENSIONS
-AC_LANG_PUSH([C++])
+AM_INIT_AUTOMAKE([subdir-objects])
+LT_PREREQ([2.4])
+LT_INIT([])
 
-# Checks for header files.
+
+# check for programs
+
+AX_CXX_COMPILE_STDCXX_11
+
+
+# check for headers
+
 AC_CHECK_HEADERS([stdlib.h sys/time.h sys/resource.h])
 AC_HEADER_STDC
+
 
 # Checks for typedefs, structures, and compiler characteristics.
 
